# El_Shop_DRF

./: README.md  pyproject.toml
config/: settings.py  urls.py
el_shop/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
el_shop/migrations/: 0001_initial.py  0002_remove_contact_member_alter_contact_options_and_more.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_avatar_alter_user_city_and_more.py
